bottom gap fix

--- a/css/style.css
+++ b/css/style.css
@@ -1509,30 +1509,33 @@ svg {
 
 
 /*------- back to top -------*/
-@media (min-width: 1200px) {
+.back-to-top {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    background: #0D1849;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    display: none; /* Скрываем кнопку по умолчанию */
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s, transform 0.3s;
+    z-index: 20;
+}
+
+.back-to-top:hover {
+    background: #1A2A6C;
+    transform: scale(1.1);
+}
+
+@media (max-width: 1199.98px) {
     .back-to-top {
-        position: fixed;
-        bottom: 30px;
-        right: 30px;
-        width: 50px;
-        height: 50px;
-        background: #0D1849;
-        color: white;
-        font-size: 20px;
-        border: none;
-        border-radius: 50%;
-        cursor: pointer;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-        display: none; /* Скрываем кнопку по умолчанию */
-        align-items: center;
-        justify-content: center;
-        transition: opacity 0.3s, transform 0.3s;
-        z-index: 20;
+        display: none !important;
     }
-    
-    .back-to-top:hover {
-        background: #1A2A6C;
-        transform: scale(1.1);
-    }
-    
 }
